# todo-react

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
public/: index.html
server/: .gitignore  Cargo.toml  data.db  init.sql
server/src/: lib.rs  main.rs
server/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
server/src/dto/: task_dto.rs
server/src/routes/: check_middleware.rs  mod.rs  tasks_route.rs  users_route.rs
server/src/util/: app_db.rs  app_error.rs  app_json.rs  app_sqlite.rs  app_utils.rs  jwt.rs  mod.rs
src/: App.js  bulma.css  bulma.scss  index.js
src/api/: ApiCommon.js  ApiTask.js  ApiUser.js
src/components/: Button.js  Checkbox.js  CheckboxWithLabel.js  MainTitle.js  SelectInput.js  SelectWithLabel.js  TextArea.js
src/composite/: MessageBanner.js  Navbar.js  TasksPanel.js  TextWithError.js
src/pages/: CreateUser.js  Home.js  Login.js  TaskEdit.js  TaskView.js
src/store/: StoreSlice.js
src/util/: TaskHelper.js
