[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlx-sqlite"]
#default = ["sqlx-postgres"]

sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
headers = "0.4"

chrono = "0.4.44"
dotenvy = "0.15.7"
regex = "1.12.3"

sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
sea-orm = { version = "1.1.19", features = ["debug-print"] }

serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
mime = "0.3.17"
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[profile.release]
# Optimize for size
opt-level = "z"      # Optimize for size (or "s" for slightly less aggressive)
lto = true           # Link-Time Optimization
codegen-units = 1    # Single codegen unit for better optimization
#panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols

[profile.release.package."*"]
opt-level = "z"      # Also optimize dependencies for size
